# L3akCTF-2025-CTFd

./: .gitignore  Dockerfile  deploy.sh  docker-entrypoint.sh  push-image.sh  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: deploy.yml
CTFd/: config.py
CTFd/themes/btv/: .gitignore  package-lock.json  package.json
CTFd/themes/btv/assets/js/: scoreboard.js
CTFd/themes/btv/assets/scss/includes/components/: _challenge.scss
CTFd/themes/btv/static/: manifest.json
CTFd/themes/btv/static/assets/: challenges.be25ecc2.js  scoreboard.d7c85ced.js
CTFd/themes/btv/templates/: base.html  challenge.html  challenges.html  challenges.html~  login.html  register.html  scoreboard.html  scoreboard.html~
CTFd/themes/btv/templates/components/: navbar.html  navbar.html~
CTFd/themes/btv/templates/teams/: teams.html
CTFd/themes/btv/templates/users/: users.html
CTFd/themes/core-beta/assets/scss/includes/components/: _challenge.scss
CTFd/utils/email/providers/: mailgun.py
